[project]
name = "inverse-positioning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "torch>=2.9.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
